* Improved: Compatibility with Avada theme.
* Improved: Disable WooCommerce guest checkout for courses checkout.

* Updated: External library "select2" to version 4.0.2
* Updated: External library "jquery-chosen" to version 1.6.2
* Updated: External library "jquery-circle-progress" to version 1.2.1
* Updated: External font Awesome to version 4.7.0

* Fixed: Email placeholders.

= 2.0.6.2 =
-------------------------------------------------
Fixed: HTML and entities issue on unit editor.
Fixed: Preview button.

= 2.0.6.1 =
-------------------------------------------------
* Fixed: Remove vulnerability to view any module.
* Fixed: Prerequisite Courses problem with access to next course.

= 2.0.6 =
-------------------------------------------------
* Added: Redirect to login page for guest users.
* Added: Number of failed attempts at student assessment.
* Added: Validation for user related functions to avoid processing when there is no logged user.

* Improved: Change "Duration" to "Time Limit" label.
* Improved: Unify all TinyMCE editors CP instance.
* Improved: Process of saving answers.
* Improved: Required unit message.
* Improved: Message box for paid course.
* Improved: Integration with WooCommerce - when student pay with PayPal, a student will be enrolled to the ordered courses.

* Updated: Bundled MarketPress to latest version.

* Fixed: Remove inclusion of CP assets on none CP pages.
* Fixed: WooCommerce "Out of stock" product status.
* Fixed: Deleting modules when section is deleted.
* Fixed: Missing untranslated texts.
* Fixed: Marketpress sale price.
* Fixed: Editor height.
* Fixed: Missing grade for manualy graded fields when using "Save & Exit".
* Fixed: Too many redirects error.
* Fixed: HTML tags not showing in Multiple/Single Choice field.
* Fixed: Ignoring "User also needs to pass all required assessments" unit option.
* Fixed: "Passing Grade" value one assessments page.
* Fixed: Link to student profile in "Number of Courses" column.